--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="CSS/general.css">
-    <link rel="stylesheet" href="/CSS/style.css">    
+    <link rel="stylesheet" href="CSS/style.css">    
     <link rel="stylesheet" href="CSS/queries.css">
+    <script defer src="Js/script.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preload" as="image" href="img/hero.webp">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script defer src="Js/script.js"></script>
     <script
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
