--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body> 
     <header class="header sticky">  <!-- nav-open -->
       <a href="#">
-       <img src="/img/omnifood-logo.png" alt="Omnifood logo" class="logo-nav">
+       <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo-nav">
        </a>
        <nav class="main-nav">
         <ul class="main-nav-list">
@@ -56,21 +56,21 @@
           <a href="#how" class=" btn btn--outline">Learn more  &darr;</a>
           <div class="delivered-meals">
             <div class="delivered-imgs">
-              <img src="/img/customers/customer-1.jpg" alt="custmer photo">
-              <img src="/img/customers/customer-2.jpg" alt="custmer photo">
-              <img src="/img/customers/customer-3.jpg" alt="custmer photo">
-              <img src="/img/customers/customer-4.jpg" alt="custmer photo">
-              <img src="/img/customers/customer-5.jpg" alt="custmer photo">
-              <img src="/img/customers/customer-6.jpg" alt="custmer photo">
+              <img src="img/customers/customer-1.jpg" alt="custmer photo">
+              <img src="img/customers/customer-2.jpg" alt="custmer photo">
+              <img src="img/customers/customer-3.jpg" alt="custmer photo">
+              <img src="img/customers/customer-4.jpg" alt="custmer photo">
+              <img src="img/customers/customer-5.jpg" alt="custmer photo">
+              <img src="img/customers/customer-6.jpg" alt="custmer photo">
             </div>
             <p class="delivered-text"><span>250,000+</span> meals delivered last year!</p> 
           </div>
         </div>
         <div class="hero-img-box">
           <picture>
-            <source srcset="/img/hero.webp" type="image/webp">
-            <source srcset="img/hero-min.png" type="image/png">
-            <img src="/img/hero-min.png" alt="Woman enjoing food, meals in storage container, 
+            <source srcset="img/hero.webp" type="image/webp">
+            <source srcset=img/hero-min.png" type="image/png">
+            <img src="img/hero-min.png" alt="Woman enjoing food, meals in storage container, 
             and food bowls on a table" class="hero-img">
           </picture>
       </div>
