--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's Tailored to your personal tastes and nutrition needs">
     <title>Omnifood &mdash; Never cook again!</title>
-    <link rel="icon" href="img/favicon - Copy.png">
-    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+    <link rel="icon" href="img/favicon- Copy.png">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="manifest" href="manifest.webmanifest ">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -69,7 +69,7 @@
         <div class="hero-img-box">
           <picture>
             <source srcset="img/hero.webp" type="image/webp">
-            <source srcset=img/hero-min.png" type="image/png">
+            <source srcset="img/hero-min.png" type="image/png">
             <img src="img/hero-min.png" alt="Woman enjoing food, meals in storage container, 
             and food bowls on a table" class="hero-img">
           </picture>
@@ -83,9 +83,9 @@
         <div class="logos">
           <img src="img/logos/techcrunch.png" alt="techcrunch logo ">
           <img src="img/logos/business-insider.png" alt="business insider logo">
-          <img src="/img/logos/the-new-york-times.png" alt="the new york times logo">
-          <img src="/img/logos/forbes.png" alt="forbes logo">
-          <img src="/img/logos/usa-today.png" alt="ISA Today logo">
+          <img src="img/logos/the-new-york-times.png" alt="the new york times logo">
+          <img src="img/logos/forbes.png" alt="forbes logo">
+          <img src="img/logos/usa-today.png" alt="ISA Today logo">
         </div>
       </div>  
     </section>
@@ -106,11 +106,11 @@
               get all the nutrients and vitamins you need, no matter what diet you follow!</p>
           </div>
           <div class="step-img-box">
-            <img src="/img/app/app-screen-1.png" alt="iPhone app preferences selection screen" class="step-img">
+            <img src="img/app/app-screen-1.png" alt="iPhone app preferences selection screen" class="step-img">
           </div>
           <!-- Step 02 -->
            <div class="step-img-box">
-            <img src="/img/app/app-screen-2.png" alt="iPhone app meal approving plan screen" class="step-img">
+            <img src="img/app/app-screen-2.png" alt="iPhone app meal approving plan screen" class="step-img">
            </div>
            <div class="step-text-box">
             <p class="step-number">02</p>
@@ -128,7 +128,7 @@
                You can change delivery schedule and address daily!</p>
           </div>
            <div class="step-img-box"> 
-            <img src="/img/app/app-screen-3.png" alt="iPhone app delivery screen" class="step-img">
+            <img src="img/app/app-screen-3.png" alt="iPhone app delivery screen" class="step-img">
            </div>
       </section>
 
@@ -139,7 +139,7 @@
         </div>
         <div class="container grid grid--3-cols margin-bottom-md">
           <div class="meal">
-            <img src="/img/meals/meal-1.jpg" alt="Japanese Gyozas" class="meal-img">
+            <img src="img/meals/meal-1.jpg" alt="Japanese Gyozas" class="meal-img">
             <div class="meal-content">
               <div class="meal-tags">
                 <span class="tag tag--vegetarian">Vegetarian</span>
@@ -164,7 +164,7 @@
 
           
           <div class="meal">
-            <img src="/img/meals/meal-2.jpg" alt="Japanese Gyozas" class="meal-img">
+            <img src="img/meals/meal-2.jpg" alt="Japanese Gyozas" class="meal-img">
             <div class="meal-content">
               <div class="meal-tags">
                 <span class="tag tag--vegan">Vegan</span>
@@ -217,25 +217,25 @@
        
         <div class="Testimonials">
           <figure class="Testimonial">
-            <img src="/img//customers/dave.jpg" alt=" Dave Bryson picture" class="Testimonial-img">
+            <img src="img/customers/dave.jpg" alt=" Dave Bryson picture" class="Testimonial-img">
             <blockquote class="Testimonial-text">Inexpensive, healthy and great-tasting meals,
               without even having to order manually! It feels truly magical.</blockquote>
               <p class="Testimonial-name"> &mdash; Dave Bryson</p>
           </figure>
           <figure class="Testimonial">
-            <img src="/img//customers/ben.jpg" alt=" Ben Hadley picture" class="Testimonial-img">
+            <img src="img/customers/ben.jpg" alt=" Ben Hadley picture" class="Testimonial-img">
             <blockquote class="Testimonial-text">The AI algorithm is crazy good, it chooses the right meals for me every time.
               It's amazing not to worry about food anymore!</blockquote>
               <p class="Testimonial-name"> &mdash; Ben Hadley</p>
           </figure>
           <figure class="Testimonial">
-            <img src="/img//customers/steve.jpg" alt=" Steve Miller picture" class="Testimonial-img">
+            <img src="img/customers/steve.jpg" alt=" Steve Miller picture" class="Testimonial-img">
             <blockquote class="Testimonial-text">Omnifood is a life saver! I just started a company,
               so there's no time for cooking. I couldn't live without my daily meals now!</blockquote>
               <p class="Testimonial-name"> &mdash; Steve Miller</p>
           </figure>
           <figure class="Testimonial">
-            <img src="/img//customers/hannah.jpg" alt=" Hannah Smith picture" class="Testimonial-img">
+            <img src="img/customers/hannah.jpg" alt=" Hannah Smith picture" class="Testimonial-img">
             <blockquote class="Testimonial-text">I got Omnifood for the whole family, and it frees up so much time! Plus,
               everything is organic and vegan and without plastic.</blockquote>
               <p class="Testimonial-name"> &mdash;Hannah Smith</p>
@@ -244,7 +244,7 @@
         </div>
         <div class="gallery">
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-1.jpg" alt="photo of beautifully arranged food">
+            <img src="img/gallery/gallery-1.jpg" alt="photo of beautifully arranged food">
           </figure>
           <figure class="gallery-item">
             <img src="img/gallery/gallery-2.jpg" alt="photo of beautifully arranged food">            
@@ -397,7 +397,7 @@
       <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#">
-            <img src="/img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+            <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
           </a>
           <UL class="social-links margin-top-zero">
             <li><a href="#" class="footer-link"><ion-icon class="social-icon" name="logo-instagram"></ion-icon></a></li>
