--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's Tailored to your personal tastes and nutrition needs">
     <title>Omnifood &mdash; Never cook again!</title>
-    <link rel="icon" href="img/favicon- Copy.png">
+    <link rel="icon" href="img/favicon.png">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="manifest" href="manifest.webmanifest ">
 
@@ -445,4 +445,5 @@
       </div>
     </footer>
   </body>
+
 </html>
